# erc20-substream

./: .gitignore  Cargo.toml  readme.md  rust-toolchain.toml  substreams.yaml
proto/: erc20.proto
src/: erc20.rs  lib.rs  maps.rs  mod.rs
src/pb/: erc20.rs  mod.rs
