[package]
name = "erc20-substream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0"
prost = "0.13.5"
prost-types = "0.13.5"
num-bigint = "0.4"
substreams = "0.6.1"
substreams-ethereum = "0.10.5"
substreams-entity-change = "2.0.0"
substreams-database-change = "2.1.1"

[build-dependencies]
prost-build = "0.13.5"
anyhow = "1"
substreams-ethereum = "0.10.5"